# stick_balancing

./: CMakeLists.txt  README.md  package.xml
config/: controller_configuration.yaml  controller_configuration_velocity.yaml
launch/: gazebo.launch.py  stick.launch.py  stick_position.launch.py  stick_velocity.launch.py
src/: main.py  main_position.py  main_velocity.py  stick_balance.py
urdf/: stick.gazebo  stick.xacro
urdf/test/: stick.urdf
worlds/: empty_world.world
